fixed option bar alignment

--- a/Website/styles/mainStyles.css
+++ b/Website/styles/mainStyles.css
@@ -44,7 +44,6 @@ html, body {
 }
 
 #queryOptionList {
-    width: 85%;
     margin: 0px auto;
 }
 
