--- a/Website/styles/mainStylesDesktop.css
+++ b/Website/styles/mainStylesDesktop.css
@@ -3,6 +3,5 @@
     margin: 0 auto;
 }
 #queryOptionList {
-    width: 65%;
     margin: 0px auto;
 }
